# aiase2

./: CLAUDE.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
aiase-ejercicio-mvp/: README.md  pyproject.toml
aiase-ejercicio-mvp/src/ai_usage_dashboard/: __init__.py  aggregate.py  cli.py  config.py  cost_engine.py  discovery.py  models.py  offline.py  pricing.py  report.py  scanner.py  server.py  verify.py
aiase-ejercicio-mvp/src/ai_usage_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aiase-ejercicio-mvp/src/ai_usage_dashboard/pricing/: pricing_table.json
aiase-ejercicio-mvp/src/ai_usage_dashboard/web/: app.js  index.html  styles.css
aiase-ejercicio-mvp/tests/: test_dashboard.py
aiase-ejercicio-mvp/tests/fixtures/sources/.claude/projects/demo/: corrupt.jsonl  no_model.jsonl  no_tokens.jsonl  unknown_price.jsonl  valid_full.jsonl
